2008-10-14 yusei
* Start to develop version 5.3.

2008-10-10 yusei
* Removed business_template_skin_layer_priority from erp5_wizard skin folder. Now express_customisation bt will control customisation stuff.

2008-10-9 yusei
* Handle HTTP_ACCEPT_LANGUAGE better.

2008-10-06 ivan
* User server side rendered messages (for i18n)

2008-10-2 yusei
* Use cookie to store user's preferred language and set the language value to REQUEST so that next page after login can use correct language.

2008-10-2 yusei
* Update xml format.

2008-10-2 yusei
* Fixed a bug on language selection. Remove country code from language tag.

2008-10-1 vincentd
* Add a js file for overwrite the js of normal access-tab (to access to the sales of Express products), and put a hight priority for
the skin folder

2008-09-25 ivan
* Wizard uses client's preferred language settings

2008-09-02 ivan
* Wizard uses a dedicated template

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-05-19 yo
* Temporarily, recommend firefox for IE users.

2007-12-06 yo
* Move portal_wizard to Tools.

2007-10-03 Yusei
* Added a exclusive preference object for erp5 express and its view form.

2006-04-14 Romain
* First build.