@@ -1,3 +1,6 @@
+2008-10-23 yusei
+* Remove erp5_tabber.js.
+
 2008-10-14 yusei
 * Start to develop version 5.3.
 
